Bugs Mirror reported issues fixed